<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_VisionRecipe" Id="{d8d90346-9e8d-4183-ad14-9dc8066bdffa}">
    <Declaration><![CDATA[TYPE ST_VisionRecipe :
STRUCT
	stFiducialDistance2Value: ST_Position;
	stPocket : ST_Position;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>